// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a default badge 1`] = `
<span
  className="slds-badge"
>
  Lovely badge
</span>
`;

exports[`renders a light badge renders badge 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  Light
</span>
`;

exports[`renders a light badge renders badge with icon only 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  <span
    className="slds-icon_container slds-icon-utility-world"
    title="Description of icon when needed"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      assistive text goes here, do it!
    </span>
  </span>
</span>
`;

exports[`renders a light badge renders badge with left icon 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  <span
    className="slds-icon_container slds-icon-utility-world slds-m-right_xx-small"
    title="Description of icon when needed"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
      />
    </svg>
  </span>
  Icon on the left
</span>
`;

exports[`renders a light badge renders badge with right icon 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  <span
    className="slds-icon_container slds-icon-utility-world slds-m-right_xx-small"
    title="Description of icon when needed"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
      />
    </svg>
  </span>
  Icon on the right
</span>
`;

exports[`renders an inverse badge 1`] = `
<span
  className="slds-badge slds-badge_inverse"
>
  Lovely badge
</span>
`;
